Added styles for hero section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <button>Sign Up</button>
                 </div>
                 <div class="hero-img">
-                    <img src='#' alt='text' />
+                    <img src='./monitors.jpg' alt='Computer monitors and binary code' />
                 </div>
             </div>
         </div>
