Added styles for boxes section

--- a/index.html
+++ b/index.html
@@ -42,21 +42,25 @@
         </div>
         <div id="boxes-section">
             <h2>Some random information.</h2>
-            <div class='box-container'>
-                <div class="box"></div>
-                <div class="box-text">this is some subtext under and illustration or image</div>
-            </div>
-            <div class='box-container'>
-                <div class="box"></div>
-                <div class="box-text">this is some subtext under and illustration or image</div>
-            </div>
-            <div class='box-container'>
-                <div class="box"></div>
-                <div class="box-text">this is some subtext under and illustration or image</div>
-            </div>
-            <div class='box-container'>
-                <div class="box"></div>
-                <div class="box-text">this is some subtext under and illustration or image</div>
+            <div class="boxes-container">
+
+                <div class='box-container'>
+                    <div class="box"></div>
+                    <p class="box-text">this is some subtext under an illustration or image</p>
+                </div>
+                <div class='box-container'>
+                    <div class="box"></div>
+                    <p class="box-text">this is some subtext under an illustration or image</p>
+                </div>
+                <div class='box-container'>
+                    <div class="box"></div>
+                    <p class="box-text">this is some subtext under an illustration or image</p>
+                </div>
+                <div class='box-container'>
+                    <div class="box"></div>
+                    <p class="box-text">this is some subtext under an illustration or image</p>
+                </div>
+
             </div>
         </div>
         <div id="quote-section">
