--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel='stylesheet' href='./styles.css' />
 </head>
 
+
 <body>
     <div id="site-wrapper">
         <nav>
@@ -64,9 +65,14 @@
             </div>
         </div>
         <div id="quote-section">
-            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up
-                space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-            <div class="quote-author">-Thor, God of Thunder</div>
+            <div class="quote-container">
+
+
+                <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just
+                    filling up space, or maybe people will actually read it. Who knows? All I know is that it looks
+                    nice.</div>
+                <div class="quote-author">-Thor, God of Thunder</div>
+            </div>
         </div>
         <div id="cta-section">
             <div class="width-limit">
