--- a/index.html
+++ b/index.html
@@ -76,15 +76,13 @@
         </div>
         <div id="cta-section">
             <div class="width-limit">
-                <div class="cta-container">
-                    <div class="cta-text">
-                        <h3>Call to action! It's time!</h3>
-                        <p>Sign up for our product by clicking that button over there!</p>
-                    </div>
-                    <button>
-                        Sign up
-                    </button>
+                <div class="cta-text-container">
+                    <h3>Call to action! It's time!</h3>
+                    <p>Sign up for our product by clicking that button over there!</p>
                 </div>
+                <button>
+                    Sign up
+                </button>
             </div>
         </div>
         <footer>Copyright © The Odin Project 2022</footer>
